<resources>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="security">Security</string>
    <string name="log_out">Log out</string>
    <string name="my_products">My products</string>
    <string name="add_new_product">Add new product</string>
    <string name="sing_in_to_account">Sing in to account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="great">Great!</string>
    <string name="get_help_signing_in">Get help Signing in</string>
    <string name="help_signing_text">Enter the email address or username\nassociated with your account</string>
    <string name="username_or_email">Username or email</string>
    <string name="continue_text">Continue</string>
    <string name="enter_recovery_code">Enter recovery code</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="help_center">Help center</string>
    <string name="edit_profile">Edit profile</string>
    <string name="lets_you_in">Lets you in</string>
    <string name="you_can_sign_in_with">You can sign in with</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="or">or</string>
    <string name="search_for_anything">Search for anything</string>
    <string name="products">Products</string>
    <string name="see_all">See all</string>
    <string name="shop_categories">Shop categories</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="mock_price">US $XXX</string>
    <string name="product_image">Product image</string>
    <string name="mock_discount">xx%</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="specifications">Specifications</string>
    <string name="reviews">Reviews</string>
    <string name="questions">Questions</string>
    <string name="similar_goods">Similar goods</string>
    <string name="wishlist">Wish list</string>
    <string name="total_price">Total price</string>
    <string name="warning">Warning!</string>
    <string name="do_you_want_delete_cart">Do you want delete cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ongoing">Ongoing</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="you_don_t_have_an_ongoing_orders_at_this_time">You don’t have an ongoing orders at this time</string>
    <string name="there_are_no_cancelled_orders">There are no cancelled orders</string>
    <string name="you_don_t_have_completed_orders_yet">You don’t have completed orders yet</string>
    <string name="track_order">Track order</string>
    <string name="in_delivery">In delivery</string>
    <string name="leave_review">Leave review</string>
    <string name="buy_again">Buy again</string>
    <string name="how_is_your_order">How is your order</string>
    <string name="add_photo">Add photo</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="type_review">Type review</string>
    <string name="comment_added_successfully">Comment added successfully!</string>
</resources>