<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/bottom_home_active_inactive_icon"/>

    <item android:id="@+id/ordersFragment"
        android:title="@string/orders"
        app:showAsAction="ifRoom"
        android:icon="@drawable/bottom_orders_active_inactive_icon"/>

    <item android:id="@+id/cartFragment"
        android:title="@string/cart"
        app:showAsAction="ifRoom"
        android:icon="@drawable/bottom_cart_active_inactive_icon"/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/bottom_profile_active_inactive_icon"/>

</menu>