<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".content.login.LoginFragment">

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        style="@style/BarlowBold32spStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/sing_in_to_account" />

    <EditText
        android:id="@+id/inputName"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputPassword"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableEnd="@drawable/ic_close_eye"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/NunitoRegular16spStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:buttonTint="@color/carrot_accent"
        android:text="@string/remember_me" />

    <TextView
        android:id="@+id/buttonSignIn"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/sign_in" />

    <TextView
        style="@style/NunitoRegular18spStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_the_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/line_color" />

        <TextView
            style="@style/NunitoRegular18spStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/or_continue_with" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/line_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <TextView
            style="@style/NunitoMedium18spStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account" />

        <TextView
            style="@style/NunitoSemiBold18spStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/carrot_accent" />
    </LinearLayout>

</LinearLayout>