<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/product_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvName"
        style="@style/NunitoSemiBold16spStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/NunitoRegular14spStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_description" />

    <TextView
        android:id="@+id/tvCurrentPrice"
        style="@style/NunitoBold14spStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mock_price" />

    <TextView
        android:id="@+id/tvPreviousPrice"
        style="@style/NunitoRegular14spStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mock_price" />
</LinearLayout>

